fix: Make mvn javadoc:javadoc work